# uf2

utils/pypi/: setup.cfg  setup.py
utils/pypi/uf2/: __init__.py  uf2conv.py  uf2families.json
