[metadata]
name= uf2
version= 0.1.0
url = https://github.com/microsoft/uf2
description= Utilities to pack and unpack UF2 files
author = Microsoft Corporation
author_email = opencode@microsoft.com
keywords =
    uf2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
license_files = = LICENSE.txt

[options]
packages = find:

[options.package_data]
uf2 = uf2families.json

[options.entry_points]
console_scripts =
    uf2conv = uf2.uf2conv:main
